Første implementering av St. Peter API.
