# mediator/src/main/kotlin/no/nav/dagpenger/stpeter/StPeterApi.kt
@@ -1,0 +1,57 @@
+package no.nav.dagpenger.stpeter
+
+import io.ktor.http.HttpStatusCode
+import io.ktor.server.application.Application
+import io.ktor.server.auth.authenticate
+import io.ktor.server.plugins.swagger.swaggerUI
+import io.ktor.server.request.receive
+import io.ktor.server.response.respond
+import io.ktor.server.routing.get
+import io.ktor.server.routing.post
+import io.ktor.server.routing.route
+import io.ktor.server.routing.routing
+import no.nav.dagpenger.Ident.Companion.tilPersonIdentfikator
+import no.nav.dagpenger.api.auth.AuthFactory
+import no.nav.dagpenger.api.authenticationConfig
+import no.nav.dagpenger.api.models.IdentForesporsel
+import no.nav.dagpenger.api.token
+import no.nav.dagpenger.tilgangsmaskin.TilgangsmaskinClient
+import no.nav.dagpenger.tilgangsmaskin.TilgangsmaskinResponseService
+
+internal fun Application.stpeterApi(
+    authFactory: AuthFactory,
+    tilgangsmaskinClient: TilgangsmaskinClient,
+) {
+    val tilgangsmaskinResponseService =
+        TilgangsmaskinResponseService(
+            tilgangsmaskinClient = tilgangsmaskinClient,
+        )
+    authenticationConfig(authFactory)
+
+    routing {
+        route("/api/v1") {
+            swaggerUI(path = "openapi", swaggerFile = "st-peter-api.yaml", {
+            })
+
+            get { call.respond(HttpStatusCode.OK) }
+
+            authenticate("azureAd") {
+                post("/person") {
+                    val identForespørsel = call.receive<IdentForesporsel>()
+                    val ident = identForespørsel.ident.tilPersonIdentfikator()
+
+                    val tilgangTilPersonKomplett =
+                        tilgangsmaskinResponseService.evaluerTilgangTilPersonKomplett(
+                            ident = ident.identifikator(),
+                            token = call.token(),
+                        )
+
+                    call.respond(
+                        status = HttpStatusCode.fromValue(tilgangTilPersonKomplett.status),
+                        message = tilgangTilPersonKomplett.reason ?: "",
+                    )
+                }
+            }
+        }
+    }
+}
